--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,7 @@ allprojects {
         jcenter()
     }
 }
+
+task configTestTask {
+    dependsOn ":backend:appengineRun", ":app:connectedCheck", ":backend:appengineStop"
+}
