--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile project(':joketeller')
     compile project(':jokedisplay')
     // Added for Ad
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    freeCompile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
